Fix no-wrap issue on tabs

--- a/components/active/screen.css
+++ b/components/active/screen.css
@@ -46,6 +46,7 @@
     overflow: hidden;
     text-decoration: none;
     direction: rtl;
+    white-space: nowrap;
 }
 
 #tab-list-active-files li.changed {
